Implantacao Oracle Viasoft

--- a/common.yaml
+++ b/common.yaml
@@ -13,7 +13,8 @@ lb2_ora_totvs::params::nationalcharacter_set: 'AL16UTF16' #default value
 lb2_ora_totvs::params::user_base_dir: '/home' #default value
 lb2_ora_totvs::params::listener_port: '1521' #default value
 lb2_ora_totvs::params::installation_title: 'totvsDb_Create' #default value
-
+lb2_ora_totvs::params::datapump_directory: 'DATAPUMP' # default value
+lb2_ora_totvs::params::backup_dir: '/u01/app/oracle/backup' # default value
 #Only use those params if ship_software = false
 # If ship_software = true the file name will be provided
 # automatically.
@@ -34,8 +35,6 @@ lb2_ora_totvs::listener_name: 'listener' #default value
 #Backup specific params
 lb2_ora_totvs::backup::rman_retention: '1' # default value
 lb2_ora_totvs::backup::datapump_retention: '2' # default value
-lb2_ora_totvs::backup::datapump_directory: 'DATAPUMP' # default value
-lb2_ora_totvs::backup::backup_dir: '/u01/app/oracle/backup' # default value
 # Cron minute:hour for backups first it's hour then minutes
 lb2_ora_totvs::backup::rman_cron: # default value
 - '00'
